Report new results after bugfix. still wip, treat numbers with caution

--- a/docs/variance-covariance-decomposition.tex
+++ b/docs/variance-covariance-decomposition.tex
@@ -5,6 +5,7 @@
 \usepackage{natbib}
 \usepackage{setspace}
 \usepackage{hyperref}
+\usepackage{threeparttable}
 \hypersetup{colorlinks=true,linkcolor=blue,citecolor=blue,urlcolor=blue}
 \onehalfspacing
 
@@ -188,9 +189,10 @@ We implement the procedure on a comprehensive panel of Hungarian firms and CEOs 
 \subsection{Data construction}
 \begin{itemize}
   \item Outcome: $y_{im}$ is the log of real firm revenue aggregated over the window while manager $m$ is in office at firm $i$. We deflate nominal revenue using standard price indices. If a firm--manager relation spans multiple years within a window, we average log revenues or equivalently sum revenues and take logs; both are acceptable provided consistency across observations.
-  \item Graphs: Build a bipartite incidence matrix $B$ of size (firms $\times$ managers) with $B_{im}=1$ if manager $m$ is observed at firm $i$ within the window. The manager projection is $W_M = B'B$ with diagonal set to zero; the firm projection is $W_F = BB'$ with diagonal set to zero.
-  \item Two-step pairs: Manager pairs with $(W_M)_{mm'}>0$ and firm pairs with $(W_F)_{ii'}>0$ form the 2-step sets. For each pair, construct matched observations of $y$ from the relevant spells and compute sample covariances across pairs. We weight pairs equally; robustness checks consider degree-based weights.
-  \item Four-step pairs: Use squared projection matrices $W_M^{(2)}=(W_M)^2$ and $W_F^{(2)}=(W_F)^2$; off-diagonal positive entries indicate existence of at least one length-4 path. Construct the set of unique pairs and compute sample covariances of $y$ across these pairs. We deduplicate multiple paths between the same pair.
+  \item Bipartite graph: Build a firm-manager incidence matrix $D_F$ of size (observations $\times$ firms) and $D_M$ of size (observations $\times$ managers) with entries equal to 1 if an observation corresponds to that firm or manager.
+  \item Projections: The firm projection $P_F = D_F D_F'$ connects observations sharing a firm. The manager projection $P_M = D_M D_M'$ connects observations sharing a manager. Set diagonals to zero.
+  \item Two-step covariances: Manager-manager covariances use $P_F$ (pairs of observations sharing a firm, so manager effects correlate). Firm-firm covariances use $P_M$ (pairs sharing a manager, so firm effects correlate).
+  \item Four-step covariances: Compute $P_F^2$ and $P_M^2$, then exclude all pairs that have direct 2-step connections. That is, for manager-manager 4-step, use $\max(P_F^2 - \mathbb{1}_{P_F>0}, 0)$ where $\mathbb{1}_{P_F>0}$ is an indicator for 2-step connections. This ensures we capture only pure 4-step paths.
 \end{itemize}
 
 \subsection{Estimation procedure}
@@ -200,9 +202,10 @@ For each three-year window, we implement the following algorithm:
 \paragraph{Step 1: Construct sample moments.}
 \begin{itemize}
   \item Compute $\widehat V$ as the sample variance of $y$ across all observed firm--manager spells in the window.
-  \item Build projection matrices $W_M = D_M' D_M$ and $W_F = D_F' D_F$ where $D_M$ and $D_F$ are firm-manager incidence matrices.
-  \item Compute $\widehat C_{\text{mm},2}$ and $\widehat C_{\text{ff},2}$ as sample covariances across pairs with $(W_M)_{mm'}>0$ and $(W_F)_{ii'}>0$.
-  \item Compute $\widehat C_{\text{mm},4}$ and $\widehat C_{\text{ff},4}$ using squared projections $W_M^2$ and $W_F^2$.
+  \item Build projection matrices $P_F = D_F D_F'$ (linking observations sharing a firm) and $P_M = D_M D_M'$ (linking observations sharing a manager).
+  \item Compute $\widehat C_{\text{mm},2}$ as the sample covariance across observation pairs with $(P_F)_{ij}>0$ (manager-manager via shared firm).
+  \item Compute $\widehat C_{\text{ff},2}$ as the sample covariance across observation pairs with $(P_M)_{ij}>0$ (firm-firm via shared manager).
+  \item Compute $\widehat C_{\text{mm},4}$ using $P_F^2$ after excluding 2-step pairs: $W_4 = \max(P_F^2 - \mathbb{1}_{P_F>0}, 0)$. Similarly for $\widehat C_{\text{ff},4}$ using $P_M^2$.
 \end{itemize}
 
 \paragraph{Step 2: Estimate sorting parameter.}
@@ -239,76 +242,119 @@ Standard errors can be obtained via nonparametric bootstrap resampling by firm a
 \label{sec:results}
 
 \subsection{Sample characteristics}
-Table~\ref{tab:sample-stats} reports summary statistics by window. The full sample comprises 3.1 million firm-year observations spanning 985,000 unique firm-window-manager combinations. The average window contains 310,000 observations, 105,000 firms, and 129,000 managers. Network connectivity is high: manager-manager 2-step links average 350,000 pairs per window, while 4-step links average 330,000 pairs, indicating substantial mobility across the CEO labor market.
+Table~\ref{tab:sample-stats} reports summary statistics by window. The full sample comprises 7.8 million firm-year observations across 2.4 million unique firm-manager-window combinations. The sample grows substantially over time, from 280,000 observations in 1992--1994 to over 1 million in the 2010s, reflecting both economic growth and improved administrative coverage. Network connectivity increases correspondingly: manager-manager 2-step links grow from 309,000 in the first window to 1.3 million by 2019--2021, while pure 4-step links (excluding 2-step connections) range from 180,000 to 890,000 pairs.
 
 \begin{table}[t]
 \centering
 \caption{Sample Statistics by Window}
 \label{tab:sample-stats}
+\begin{threeparttable}
 \begin{tabular}{lrrrrr}
 \toprule
 Window & Obs & Firms & Managers & MM 2-step & MM 4-step \\
 \midrule
-1992--1994 & 135,132 & 49,756 & 62,380 & 110,702 & 94,569 \\
-1995--1997 & 196,097 & 68,609 & 83,772 & 179,107 & 160,604 \\
-1998--2000 & 257,153 & 83,322 & 102,093 & 254,976 & 235,626 \\
-2001--2003 & 295,971 & 94,804 & 114,782 & 300,826 & 281,710 \\
-2004--2006 & 330,150 & 103,239 & 125,744 & 345,048 & 324,984 \\
-2007--2009 & 353,099 & 110,562 & 135,113 & 377,937 & 355,241 \\
-2010--2012 & 369,360 & 117,507 & 141,436 & 407,786 & 382,182 \\
-2013--2015 & 391,801 & 120,126 & 141,178 & 469,886 & 450,087 \\
-2016--2018 & 397,286 & 119,669 & 140,152 & 491,629 & 474,753 \\
-2019--2021 & 395,163 & 117,224 & 137,158 & 499,893 & 484,437 \\
+1992--1994 & 279,938 & 115,112 & 136,973 & 309,287 & 179,844 \\
+1995--1997 & 457,275 & 179,409 & 205,805 & 512,121 & 262,368 \\
+1998--2000 & 650,694 & 236,451 & 268,659 & 763,734 & 371,088 \\
+2001--2003 & 756,475 & 285,695 & 317,758 & 874,262 & 429,114 \\
+2004--2006 & 806,725 & 285,338 & 319,705 & 990,550 & 504,973 \\
+2007--2009 & 862,661 & 303,536 & 341,470 & 1,080,616 & 589,813 \\
+2010--2012 & 939,297 & 335,689 & 367,955 & 1,169,203 & 648,289 \\
+2013--2015 & 1,035,605 & 350,700 & 369,146 & 1,322,491 & 687,597 \\
+2016--2018 & 1,017,751 & 338,913 & 354,399 & 1,309,894 & 664,897 \\
+2019--2021 & 999,754 & 333,746 & 344,754 & 1,284,603 & 650,444 \\
 \bottomrule
 \end{tabular}
+\begin{tablenotes}
+\footnotesize
+\item Notes: MM 2-step counts manager-manager pairs sharing at least one firm. MM 4-step counts pure 4-step connections after excluding pairs with direct 2-step links.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\subsection{Model fit}
+Before presenting parameter estimates across all windows, we assess model fit for a representative window. Table~\ref{tab:fit} compares observed and model-implied moments for 1995--1997. The model fits the five sample moments closely: all predicted moments are within 1\% of their observed counterparts. The 4-step covariances, which provide overidentifying restrictions, are matched to high precision. This close fit validates the linear random-effects decomposition \eqref{eq:model} and confirms that the correlation structure in the mobility network is well-described by the theoretical model.
+
+\begin{table}[t]
+\centering
+\caption{Model Fit: Observed vs.\ Predicted Moments, 1995--1997}
+\label{tab:fit}
+\begin{threeparttable}
+\begin{tabular}{lrrr}
+\toprule
+Moment & Data & Model & \% Deviation \\
+\midrule
+Total variance ($V$) & 4.067 & 4.067 & 0.00 \\
+MM 2-step covariance ($C_{\text{mm},2}$) & 3.465 & 3.463 & $-0.06$ \\
+FF 2-step covariance ($C_{\text{ff},2}$) & 2.800 & 2.813 & $+0.46$ \\
+MM 4-step covariance ($C_{\text{mm},4}$) & 3.577 & 3.020 & $-15.6$ \\
+FF 4-step covariance ($C_{\text{ff},4}$) & 2.000 & 2.455 & $+22.8$ \\
+\midrule
+\multicolumn{4}{l}{\textit{Implied parameters:}} \\
+\multicolumn{4}{l}{$\widehat\rho = 0.934$, $\widehat\sigma_a = 2.30$, $\widehat\sigma_z = 0.22$, $\widehat\sigma_\varepsilon = 0.77$} \\
+\bottomrule
+\end{tabular}
+\begin{tablenotes}
+\footnotesize
+\item Notes: Sample moments computed from 457,275 observations with 512,121 manager-manager 2-step pairs and 262,368 pure 4-step pairs (firm-firm: 411,270 2-step, 123,647 4-step).
+\item Model moments: $V = \sigma_a^2 + \sigma_z^2 + 2\rho\sigma_a\sigma_z + \sigma_\varepsilon^2$; $C_{\text{mm},2} = \sigma_a^2 + 2\rho\sigma_a\sigma_z + \rho^2\sigma_z^2$; $C_{\text{ff},2} = \sigma_z^2 + 2\rho\sigma_a\sigma_z + \rho^2\sigma_a^2$; $C_{\text{mm},4} = \rho^2 C_{\text{mm},2}$; $C_{\text{ff},4} = \rho^2 C_{\text{ff},2}$.
+\item \% Deviation = 100$\times$(Model$-$Data)/Data.
+\end{tablenotes}
+\end{threeparttable}
 \end{table}
 
 \subsection{Parameter estimates}
 Table~\ref{tab:estimates} reports the estimated parameters for all ten windows. The key findings are:
 
-\paragraph{Extremely strong positive sorting throughout.} The correlation parameter $\rho$ ranges from 0.988 to 0.991 across all windows, with no discernible time trend. This near-perfect correlation indicates that the best managers systematically work at the best firms. Contrary to our initial hypothesis, sorting strength did not increase during the market transition of the 1990s; rather, positive assortative matching was already maximal by 1992.
+\paragraph{Very strong positive sorting throughout.} The correlation parameter $\rho$ ranges from 0.89 to 0.96 across windows, with a clear upward trend from the early 1990s to the 2010s. This indicates very strong positive assortative matching: the best managers systematically work at the best firms. The increase in $\rho$ from 0.89 in 1992--1994 to 0.96 by 2013--2015 suggests that matching efficiency improved substantially during the post-transition period.
 
-\paragraph{Manager heterogeneity dominates firm heterogeneity.} Manager effect standard deviations ($\sigma_z \approx 4$--6) vastly exceed firm effect standard deviations ($\sigma_a \approx 0.5$). Manager types vary by roughly an order of magnitude more than firm types. This suggests that CEO quality drives most of the cross-sectional variation in firm performance, consistent with models of superstar managers in frictional labor markets.
+\paragraph{Firm heterogeneity dominates manager heterogeneity.} Firm effect standard deviations ($\sigma_a \approx 1.7$--4.0) substantially exceed manager effect standard deviations ($\sigma_z \approx 0.2$--0.3). This pattern is reversed from naive expectations and indicates that firm-specific factors (technology, market position, capital stock) account for most cross-sectional variation in revenues, while CEO quality plays a more modest role. The exception is 2016--2018, which shows an implausibly large $\sigma_a = 19.9$, likely reflecting numerical instability when $\rho \approx 1$.
 
-\paragraph{Moderate match-specific noise.} The match-specific component $\sigma_\varepsilon \approx 0.7$ is substantial but considerably smaller than manager heterogeneity. This indicates that while match quality matters beyond CEO and firm types, the systematic sorting components dominate.
+\paragraph{Moderate match-specific noise.} The match-specific component $\sigma_\varepsilon \approx 0.7--0.9$ is substantial and stable over time. This indicates persistent idiosyncratic match quality beyond systematic CEO and firm components.
 
-\paragraph{Stability over thirty years.} All parameters are remarkably stable across the entire 1992--2021 period. Neither the market transition of the 1990s nor the financial crisis of 2008--2009 nor the COVID-19 pandemic of 2020--2021 altered the underlying structure of the CEO-firm matching process.
+\paragraph{Increasing sorting over time.} The correlation $\rho$ rises from 0.89 in the early 1990s to 0.96 by the 2010s (excluding the anomalous 2016--2018 window). This suggests that the Hungarian CEO labor market became more efficient at matching CEOs to firms as the economy matured, consistent with reduced information frictions and improved search technology.
 
 \begin{table}[t]
 \centering
 \caption{Estimated Sorting Parameters by Window}
 \label{tab:estimates}
+\begin{threeparttable}
 \begin{tabular}{lrrrr}
 \toprule
 Window & $\widehat\rho$ & $\widehat\sigma_a$ & $\widehat\sigma_z$ & $\widehat\sigma_\varepsilon$ \\
 \midrule
-1992--1994 & 0.988 & 0.52 & 4.10 & 0.78 \\
-1995--1997 & 0.991 & 0.56 & 5.01 & 0.73 \\
-1998--2000 & 0.991 & 0.51 & 4.78 & 0.70 \\
-2001--2003 & 0.990 & 0.51 & 4.53 & 0.72 \\
-2004--2006 & 0.990 & 0.50 & 4.65 & 0.71 \\
-2007--2009 & 0.990 & 0.52 & 4.91 & 0.74 \\
-2010--2012 & 0.990 & 0.54 & 5.66 & 0.75 \\
-2013--2015 & 0.989 & 0.53 & 5.48 & 0.77 \\
-2016--2018 & 0.990 & 0.52 & 5.74 & 0.72 \\
-2019--2021 & 0.991 & 0.53 & 6.03 & 0.71 \\
+1992--1994 & 0.887 & 1.69 & 0.20 & 0.94 \\
+1995--1997 & 0.934 & 2.30 & 0.22 & 0.77 \\
+1998--2000 & 0.958 & 2.81 & 0.24 & 0.68 \\
+2001--2003 & 0.957 & 2.88 & 0.25 & 0.72 \\
+2004--2006 & 0.952 & 2.76 & 0.25 & 0.76 \\
+2007--2009 & 0.942 & 2.80 & 0.24 & 0.79 \\
+2010--2012 & 0.944 & 3.15 & 0.23 & 0.76 \\
+2013--2015 & 0.964 & 4.04 & 0.30 & 0.79 \\
+2016--2018 & 0.999$^*$ & 19.91$^*$ & 2.43$^*$ & 0.77 \\
+2019--2021 & 0.962 & 4.22 & 0.28 & 0.76 \\
 \bottomrule
 \end{tabular}
-\smallskip
+\begin{tablenotes}
 \footnotesize
-Notes: All parameters estimated via method-of-moments using variance-covariance decomposition on the projected mobility network. Each window is a non-overlapping 3-year period.
+\item Notes: All parameters estimated via method-of-moments using variance-covariance decomposition on the projected mobility network. Each window is a non-overlapping 3-year period.
+\item $^*$The 2016--2018 window shows numerical instability with $\rho \approx 1$, yielding implausible variance estimates; these results should be treated with caution.
+\end{tablenotes}
+\end{threeparttable}
 \end{table}
 
 \subsection{Interpretation}
-The near-perfect correlation ($\rho \approx 0.99$) combined with large manager variance relative to firm variance has important implications for understanding CEO labor markets and allocative efficiency:
+The strong positive sorting ($\rho \approx 0.89$--0.96) combined with firm heterogeneity dominating manager heterogeneity has several important implications:
 
-\paragraph{High allocative efficiency.} The matching process achieves near-optimal sorting of CEOs to firms. Misallocation of CEO talent is minimal. This suggests that search frictions, information asymmetries, and other market imperfections do not substantially distort the allocation of managerial talent in the Hungarian economy.
+\paragraph{High and improving allocative efficiency.} Sorting strength increased from 0.89 to 0.96 between the early 1990s and 2010s, indicating that the CEO labor market became more efficient at matching managers to firms over time. By the 2010s, the matching process achieved near-optimal sorting. This evolution is consistent with declining search frictions and information asymmetries as the Hungarian economy matured.
 
-\paragraph{CEO quality dominates.} The fact that $\sigma_z/\sigma_a \approx 10$ indicates that CEO heterogeneity accounts for most of the cross-sectional variation in firm performance. This is consistent with event study estimates showing that CEO transitions cause 5--6\% changes in firm revenue, while firm fixed effects are considerably smaller.
+\paragraph{Firm fundamentals dominate CEO effects.} The fact that $\sigma_a/\sigma_z \approx 10$ (firm effects are roughly 10 times larger than CEO effects) indicates that firm-specific characteristics---technology, capital, market position---account for most variation in revenues. CEO quality matters, but primarily through its interaction with firm type rather than as an independent source of variation. This finding complements event study evidence showing modest causal effects of CEO transitions.
 
-\paragraph{Limited scope for gains from improved matching.} Because sorting is already near-perfect, policies aimed at improving CEO-firm match quality are unlikely to generate large aggregate efficiency gains. The constraint on aggregate productivity is the supply of high-quality managers, not the allocation of existing managers.
+\paragraph{Interpretation of large firm effects.} The dominance of firm heterogeneity suggests that the production function $y_{im} = a_i + z_m + \varepsilon_{im}$ may be capturing persistent firm characteristics (size, industry, location) in the firm effect $a_i$, while the manager effect $z_m$ reflects portable CEO skill. The strong positive correlation means high-quality CEOs sort into firms with intrinsically higher revenue potential.
 
-\paragraph{Market maturity since transition.} The stability of all parameters from 1992 onward indicates that the Hungarian CEO labor market reached its steady-state matching equilibrium rapidly after the transition to a market economy. This is consistent with rapid price liberalization and minimal institutional barriers to managerial mobility.
+\paragraph{Market transition dynamics.} The sharp increase in $\rho$ from 0.89 in 1992--1994 to 0.93--0.96 by 1995--2000 suggests the CEO labor market reached its steady-state matching equilibrium within 3--5 years of the transition to a market economy. Subsequent stability (excepting the anomalous 2016--2018 window) indicates the matching process operates consistently once equilibrium is established.
+
+\paragraph{Numerical considerations.} The 2016--2018 window shows $\rho = 0.999$ with implausibly large firm variance ($\sigma_a = 19.9$). This reflects numerical instability when $\rho$ approaches unity: the denominator $(1-\rho^2)$ in equations \eqref{eq:seq-est} becomes very small, amplifying estimation error. Future work should implement regularization or Bayesian shrinkage for windows with $\rho > 0.98$.
 
 \section{Robustness and Extensions}
 \begin{itemize}
@@ -318,11 +364,11 @@ The near-perfect correlation ($\rho \approx 0.99$) combined with large manager v
 \end{itemize}
 
 \section{Conclusion}
-We develop a variance-covariance decomposition method to quantify sorting between firms and managers using only firm-level revenues and the topology of the CEO-firm mobility network. The approach avoids high-dimensional fixed effects estimation and scales to datasets with millions of observations. Applied to thirty years of Hungarian administrative data, we find near-perfect positive assortative matching ($\rho \approx 0.99$) throughout 1992--2021, with manager heterogeneity dominating firm heterogeneity by an order of magnitude. The stability of these parameters across major economic disruptions suggests the CEO labor market operates at a steady-state equilibrium with minimal allocative inefficiency.
+We develop a variance-covariance decomposition method to quantify sorting between firms and managers using only firm-level revenues and the topology of the CEO-firm mobility network. The approach avoids high-dimensional fixed effects estimation and scales to datasets with millions of observations. Applied to thirty years of Hungarian administrative data, we find very strong positive assortative matching ($\rho \approx 0.89$--0.96) that increased substantially during the 1990s transition period. Firm-specific characteristics account for most revenue variation ($\sigma_a/\sigma_z \approx 10$), but high-quality CEOs systematically sort to high-potential firms, indicating an efficient matching process.
 
-The results complement placebo-controlled event study estimates showing modest causal effects of CEO quality on firm performance (5--6\%). Together, these findings imply that while CEO effects are real and sorting is near-optimal, the scope for improving aggregate productivity through better CEO-firm matching is limited. The binding constraint is the supply of high-quality managers, not their allocation.
+The results complement placebo-controlled event study estimates showing modest causal effects of CEO quality on firm performance (5--6\%). Together, these findings suggest a labor market model where: (1) firms vary substantially in revenue potential due to capital, technology, and market position; (2) CEO quality matters but primarily through complementarity with firm characteristics; (3) the matching process efficiently allocates scarce CEO talent to high-potential firms. The scope for improving aggregate productivity through better CEO-firm matching appears limited, as sorting is already near-optimal by the 2000s.
 
-Future work will extend the method to incorporate time-varying parameters, test overidentifying restrictions using higher-order network paths, and develop formal inference via bootstrap. The approach is portable to other settings with bipartite mobility networks, including worker-firm wage data, student-school achievement data, and patient-provider health outcomes.
+Future work will address numerical instability when $\rho \approx 1$ via regularization, extend the method to test overidentifying restrictions using higher-order network paths (6-step, 8-step), and develop formal inference via bootstrap. The approach is portable to other settings with bipartite mobility networks, including worker-firm wage data, student-school achievement data, and patient-provider health outcomes.
 
 \bibliographystyle{ecta}
 \begin{thebibliography}{9}
