--- a/docs/variance-covariance-decomposition.tex
+++ b/docs/variance-covariance-decomposition.tex
@@ -354,6 +354,8 @@ The strong positive sorting ($\rho \approx 0.89$--0.96) combined with firm heter
 
 \paragraph{Market transition dynamics.} The sharp increase in $\rho$ from 0.89 in 1992--1994 to 0.93--0.96 by 1995--2000 suggests the CEO labor market reached its steady-state matching equilibrium within 3--5 years of the transition to a market economy. Subsequent stability (excepting the anomalous 2016--2018 window) indicates the matching process operates consistently once equilibrium is established.
 
+\paragraph{Contrast with worker-firm sorting.} Our estimates of very strong positive sorting ($\rho \approx 0.89$--0.96) contrast sharply with the worker-firm matching literature, where correlations between worker and firm fixed effects are typically weak or even negative. \citet{Andrews2008} find negative assortative matching in German linked employer-employee data after correcting for limited mobility bias, with correlations around $-0.1$ to $-0.2$. Similar patterns emerge in other countries. The difference likely reflects fundamental distinctions between CEO and worker labor markets: (1) CEOs are scarce, high-skill workers whose productivity exhibits strong complementarity with firm capital and technology; (2) the CEO matching process involves intensive search by both sides with substantial information revelation; (3) CEOs capture a large share of match surplus through compensation negotiations, incentivizing efficient sorting. In contrast, production workers are more substitutable, match surplus is divided through collective bargaining or market wages with limited individual negotiation, and complementarities between worker skill and firm productivity are weaker. The high positive sorting we document for CEOs is therefore consistent with theoretical predictions for scarce, high-value inputs in markets with low search frictions.
+
 \paragraph{Numerical considerations.} The 2016--2018 window shows $\rho = 0.999$ with implausibly large firm variance ($\sigma_a = 19.9$). This reflects numerical instability when $\rho$ approaches unity: the denominator $(1-\rho^2)$ in equations \eqref{eq:seq-est} becomes very small, amplifying estimation error. Future work should implement regularization or Bayesian shrinkage for windows with $\rho > 0.98$.
 
 \section{Robustness and Extensions}
@@ -373,6 +375,7 @@ Future work will address numerical instability when $\rho \approx 1$ via regular
 \bibliographystyle{ecta}
 \begin{thebibliography}{9}
 \bibitem[Abowd, Kramarz, and Margolis(1999)]{AKM1999} Abowd, J. M., F. Kramarz, and D. N. Margolis (1999): ``High Wage Workers and High Wage Firms,'' \emph{Econometrica}, 67(2), 251--333.
+\bibitem[Andrews et al.(2008)]{Andrews2008} Andrews, M. J., L. Gill, T. Schank, and R. Upward (2008): ``High Wage Workers and Low Wage Firms: Negative Assortative Matching or Limited Mobility Bias?'' \emph{Journal of the Royal Statistical Society, Series A}, 171(3), 673--697.
 \bibitem[Choo and Siow(2006)]{ChooSiow2006} Choo, E., and A. Siow (2006): ``Who Marries Whom and Why,'' \emph{Journal of Political Economy}, 114(1), 175--201.
 \bibitem[Clark(2023)]{Clark2023} Clark, G. (2023): ``The Inheritance of Social Status: England, 1600 to 2022,'' \emph{Proceedings of the National Academy of Sciences of the United States of America}, 120(27), e2300926120.
 \bibitem[Graham(2008)]{Graham2008} Graham, B. S. (2008): ``Identifying Social Interactions Through Conditional Variance Restrictions,'' \emph{Econometrica}, 76(3), 643--660.
